--- a/content/Qwiklabs/gsp306.md
+++ b/content/Qwiklabs/gsp306.md
@@ -7,6 +7,10 @@ gcloud sql users set-password --host % root --instance wordpress --password Pass
 
 export ADDRESS=<external IP of blog vm/32>
 
+
+gcloud compute ssh blog --zone=us-central1-a
+
+
 gcloud sql instances patch wordpress --authorized-networks $ADDRESS --quiet
 
 
