fix: file name modify

--- a/content/qwiklabs/gsp314.md
+++ b/content/qwiklabs/gsp314.md
@@ -1,3 +1,10 @@
+---
+title: "GSP101"
+metaTitle: "GSP101"
+metaDescription: "GSP101"
+---
+
+
 ```
 cd /work/dm
 sed -i s/SET_REGION/us-east1/g prod-network.yaml
