fix: file name modify

--- a/content/qwiklabs/gsp101.md
+++ b/content/qwiklabs/gsp101.md
@@ -1,6 +1,6 @@
 ---
-title: "GSP101"
-metaTitle: "GSP101"
+title: "Google Cloud Essential Skills"
+metaTitle: "Google Cloud Essential Skills"
 metaDescription: "GSP101"
 ---
 
