--- a/content/qwiklabs/gsp306.md
+++ b/content/qwiklabs/gsp306.md
@@ -1,7 +1,7 @@
 ---
-title: "GSP101"
-metaTitle: "GSP101"
-metaDescription: "GSP101"
+title: "Migrate a MySQL Database to Google Cloud SQL"
+metaTitle: "Migrate a MySQL Database to Google Cloud SQL"
+metaDescription: "Migrate a MySQL Database to Google Cloud SQL"
 ---
 
 
