--- a/content/qwiklabs/gsp314.md
+++ b/content/qwiklabs/gsp314.md
@@ -1,7 +1,7 @@
 ---
-title: "GSP101"
-metaTitle: "GSP101"
-metaDescription: "GSP101"
+title: "Deploy and Manage Cloud Environments with Google Cloud: Challenge Lab"
+metaTitle: "Deploy and Manage Cloud Environments with Google Cloud: Challenge Lab"
+metaDescription: "Deploy and Manage Cloud Environments with Google Cloud: Challenge Lab"
 ---
 
 
