--- a/content/qwiklabs/gsp301.md
+++ b/content/qwiklabs/gsp301.md
@@ -1,7 +1,7 @@
 ---
-title: "GSP101"
-metaTitle: "GSP101"
-metaDescription: "GSP101"
+title: "Deploy a Compute Instance with a Remote Startup Script "
+metaTitle: "Deploy a Compute Instance with a Remote Startup Script "
+metaDescription: "Deploy a Compute Instance with a Remote Startup Script "
 ---
 
 ```
